--- a/day4/s2.css
+++ b/day4/s2.css
@@ -9,7 +9,7 @@
 }
 #img01{
     float: right;
-    border: 5px solid gold ;
+    border: 5px solid red ;
 }
 #i03{
     font-size: 200%;
@@ -27,4 +27,16 @@
 #img201{
     float: left;
     height: 4cm;
+}
+#sam{
+    margin: auto;
+    height: 4cm;
+    background: rgb(235, 97, 97);
+    padding: 0.1cm;
+}
+.sj{
+    background-color: rgb(255, 204, 93);
+    color: cornsilk;
+    border: black;
+    border-style: dotted;
 }
