--- a/drum-project/style.css
+++ b/drum-project/style.css
@@ -43,3 +43,8 @@ body,html{
     padding: 0;
     font-family: sans-serif;
 }
+h1{
+    font-size: 500%;
+    color: red;
+    background-color: rgba(0 ,0 ,0 ,0.4 );
+}
