--- a/drum-project/style.css
+++ b/drum-project/style.css
@@ -39,7 +39,7 @@ kbd{
     justify-content: center;
 }
 body,html{
-    margin: 0;
+    margin: 1px;
     padding: 0;
     font-family: sans-serif;
 }
@@ -47,5 +47,4 @@ h1{
     font-size: 500%;
     color: red;
     background-color: rgba(0 ,0 ,0 ,0.4 );
-    
 }
