--- a/calculator-project/s.css
+++ b/calculator-project/s.css
@@ -8,6 +8,7 @@
 table{
     fill: tomato;
     border: 5px solid black;
+    background-color: grey;
 }
 .num, .op, #bPoint,#bAC{
     height: 1cm;
@@ -22,18 +23,16 @@ table{
 #inputBar{
     height: 1cm;
     width: 4cm;
-    border: 2px solid rgb(0, 0, 92);
+    border: 2px solid navy;
+    background-color: honeydew;
     /* margin-top: 0.5cm; */
 }
-/* html{
-    /* margin: 200px 200px 200px 200px; */
-    /* border: 5px black solid; */
-    /* padding: 20px 20px 20px 20px; */
-    /* bordercolor: black; */
 
-} */
 #bEqual{
-    height: 1.02cm;
-    width: 1.02cm;
-    border: 5px solid navy;
+    height: 1cm;
+    width: 1cm;
+    border: 2px solid navy;
+}
+body{
+    background-color: sandybrown;
 }
