--- a/project-shopping-site/style.css
+++ b/project-shopping-site/style.css
@@ -1,26 +1,33 @@
 body{
-    background-color: saddlebrown;
+    background-color: skyblue;
 }
 h1{
-    background-color: gold;
-    color:red;
+    background-color: blue;
+    color: white;
     font-size: 3cm;
+    margin-left: 1cm;
+    margin-right:0.8cm
 }
 h2{
     background-color: white;
     color: steelblue;
     font-size: 1.5cm;
     font-family: brush script md;
+    
 }
 .products{
     height: 8cm;
     width: 10cm;
-    ;
+    /* float: left; */
 }
 .itm{
     list-style-type: none;
     padding: 40px 30px;
-    background-color: coral;
+    background-color:white;
+    border: solid skyblue;
+    height: 10.5cm;
+    margin-right: 0.8cm;
+
 }
 .addToCart{
     color: red;
@@ -28,15 +35,34 @@ h2{
     height: 1cm;
     width: 3cm;
     font-size: 0.5cm;
+    float: right;
+    background-color: yellow;
+    border: 4px solid red;
 }
 #cart{
     height: 2cm;
     width: 2cm;
+    /* margin-top: 0cm; */
+    margin-bottom: 0cm;
    
 }
-#items{
-    /* background-color: brown; */
-}
+/* #items{
+    background-color: blue;
+} */
 #cartDiv{
     background-color: burlywood;
+}
+.price{
+    width: 10cm;
+    background-color: blue;
+    height: 2cm;
+    color: wheat;
+    font-size: 1.8cm;
+    margin: 0px 0px 0px 0px;
+    /* float: left; */
+}
+.item1{
+    background-color: rgb(105, 200, 238);
+    width: 10.01cm;
+    float: left;
 }
