--- a/project-shopping-site/style.css
+++ b/project-shopping-site/style.css
@@ -1,35 +1,37 @@
-body{
+body {
     background-color: skyblue;
 }
-h1{
+
+h1 {
     background-color: blue;
     color: white;
     font-size: 3cm;
     margin-left: 1cm;
-    margin-right:0.8cm
+    margin-right: 0.8cm
 }
-h2{
+h2 {
     background-color: white;
     color: steelblue;
     font-size: 1.5cm;
     font-family: brush script md;
-    
 }
-.products{
+
+.products {
     height: 8cm;
     width: 10cm;
     /* float: left; */
 }
-.itm{
+
+.itm {
     list-style-type: none;
     padding: 40px 30px;
-    background-color:white;
+    background-color: white;
     border: solid skyblue;
     height: 10.5cm;
     margin-right: 0.8cm;
-
 }
-.addToCart{
+
+.addToCart {
     color: red;
     cursor: pointer;
     height: 1cm;
@@ -39,20 +41,26 @@ h2{
     background-color: yellow;
     border: 4px solid red;
 }
-#cart{
+
+#cart {
     height: 2cm;
     width: 2cm;
     /* margin-top: 0cm; */
     margin-bottom: 0cm;
-   
 }
-/* #items{
-    background-color: blue;
-} */
-#cartDiv{
-    background-color: burlywood;
+
+h2 {
+    margin-left: 0.7cm;
+    margin-right: 0.7cm;
 }
-.price{
+
+#cartDiv {
+    background-color: white;
+    margin-left: 0.7cm;
+    margin-right: 0.7cm;
+}
+
+.price {
     width: 10cm;
     background-color: blue;
     height: 2cm;
@@ -61,8 +69,14 @@ h2{
     margin: 0px 0px 0px 0px;
     /* float: left; */
 }
-.item1{
+
+.item1 {
     background-color: rgb(105, 200, 238);
     width: 10.01cm;
     float: left;
+}
+
+.cart_img {
+    height: 1.5cm;
+    width: 1.5cm;
 }
